Fix length-menu label spacing (#553)

--- a/packages/dt_for_itables/src/index.css
+++ b/packages/dt_for_itables/src/index.css
@@ -23,3 +23,7 @@ div.dt-layout-table>div {
 .itables-dtype {
     font-weight: normal;
 }
+
+div.dt-container .dt-length select.dt-input {
+    margin-inline-end: 0.35em;
+}
